package com.csl.abstractfactory;

/**
 * @author MaoLongLong
 * @date 2021-03-18 16:53:43
 */
public class AudiEngine implements Engine {

    @Override
    public String getDescription() {
        return "Audi engine";
    }
}
