package com.csl.abstractfactory;

/**
 * @author MaoLongLong
 * @date 2021-03-18 16:54:15
 */
public class AudiWheel implements Wheel {

    @Override
    public String getDescription() {
        return "Audi wheel";
    }
}
