package com.csl.abstractfactory;

/**
 * @author MaoLongLong
 * @date 2021-03-18 16:52:56
 */
public class BenzEngine implements Engine {

    @Override
    public String getDescription() {
        return "Benz engine";
    }
}
