package com.csl.abstractfactory;

/**
 * @author MaoLongLong
 * @date 2021-03-18 16:55:31
 */
public enum CarType {

    /**
     * “奔驰”
     */
    BENZ,

    /**
     * “奥迪”
     */
    AUDI
}
